@@ -175,6 +175,7 @@ David Cinege
 Mike Clarkson
 Andrew Clegg
 Brad Clements
+Robbie Clemons
 Steve Clift
 Nick Coghlan
 Josh Cogliati
